# laprop-recommender

./: .gitignore  CLAUDE_CODE_ANALYSIS_REPORT.md  CURRENT_STATUS.md  FAZ1_OZET_RAPOR.md  FAZ2_OZET_RAPOR.md  FAZ3_OZET_RAPOR.md  FAZ4_OZET_RAPOR.md  PROJECT_ARCHITECTURE_REPORT.md  PROJE_ANALIZ_RAPORU.md  README.md  REFACTOR_REPORT.md  STREAMLIT_FOLLOWUPS_REPORT.md  TEKNIK_INCELEME_RAPORU.md  TEKNOSA_CLEANUP_REPORT.md  all_data.csv  amazon_laptops.csv  amazon_scraper.py  amazon_scraper_debug.py  epey_scraper.py  incehesap_fix_report.json  incehesap_laptops.csv  incehesap_laptops_fixed.csv  incehesap_scraper.py  laptop_cache.pkl  price_collect.py  pyproject.toml  recommender.py  requirements.txt  simulation.py  simulation_outputs.jsonl  sitecustomize.py  state.json  streamlit_app.py  tall -r requirements.txt  teknosa_laptops.csv  teknosa_laptops_repaired.csv  teknosa_laptops_test.csv  teknosa_scraper.py  vatan_laptops.csv  vatan_scraper.py
.epey_profile/: Local State
colab/: .gitignore  README.md  requirements_colab.txt
data/: amazon_laptops.csv  incehesap_fix_report.json  incehesap_laptops.csv  incehesap_laptops_raw.csv  vatan_laptops.csv  vatan_scrape_report.json
laprop/: __init__.py
logs/: cleaning_report.json  cleaning_report_summary.json
scripts/: smoke_imports.py
tests/: conftest.py  test_clean.py  test_cli_nlp.py  test_console.py  test_engine.py  test_epey_csv_write.py  test_integration.py  test_llm_prefs.py  test_logging.py  test_normalize.py  test_read.py  test_repository.py  test_rules.py  test_scraper_smoke.py  test_screen_size.py  test_validate.py
(+1070 files in other folders)
